--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
-spring.thymeleaf.mode=HTML5
+spring.thymeleaf.mode=HTML
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.servlet.content-type=text/html
 spring.thymeleaf.cache=false
@@ -14,4 +14,12 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 loginUrl=/
 
-server.Port =80 
+server.Port =80
+#日志输出级别
+logging.level.com.fable.demo.bussiness=debug
+#日志存放位置
+logging.file=log/spring.log
+#日志保留最近两天
+logging.file.max-history=2
+#单条分割日志文件大小
+logging.file.max-size=20MB
