--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.thymeleaf.cache=false
 spring.resources.chain.strategy.content.enabled=true
 spring.resources.chain.strategy.content.paths=/**
 
-spring.datasource.jdbc-url=jdbc:mysql://192.168.20.197:3306/hairuide0625?useUnicode=true&characterEncoding=gbk&zeroDateTimeBehavior=convertToNull
+spring.datasource.jdbcUrl=jdbc:mysql://192.168.20.197:3306/hairuide?useUnicode=true&characterEncoding=gbk&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
 spring.datasource.password=root123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
