--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,10 +12,20 @@ spring.datasource.username=root
 spring.datasource.password=root123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
+#redis
+spring.redis.host=192.168.20.197
+spring.redis.port=6379
+spring.redis.jedis.pool.max-active=8
+spring.redis.jedis.pool.max-wait=2000ms
+spring.redis.jedis.pool.max-idle=500
+spring.redis.jedis.pool.min-idle=0
+spring.redis.timeout=2000ms
+
 loginUrl=/
 
 server.Port =80
-#日志输出级别
+#日志输出级别由高到低：OFF、FATAL、ERROR、WARN、INFO、DEBUG、TRACE、 ALL
+# 建议使用：ERROR、WARN、INFO、DEBUG
 logging.level.com.fable.demo.bussiness=debug
 #日志存放位置
 logging.file=log/spring.log
