--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,12 +21,27 @@ spring.redis.jedis.pool.max-idle=500
 spring.redis.jedis.pool.min-idle=0
 spring.redis.timeout=2000ms
 
+spring.kafka.bootstrap-servers=192.168.20.197:9092
+spring.kafka.consumer.enable-auto-commit=true
+spring.kafka.consumer.auto-commit-interval=1000
+spring.kafka.consumer.auto-offset-reset=latest
+spring.kafka.consumer.group-id=test
+spring.kafka.consumer.concurrency=10
+
+spring.kafka.producer.retries=0
+spring.kafka.producer.batch-size=4096
+spring.kafka.producer.acks=all
+spring.kafka.producer.lingerms=1
+spring.kafka.producer.buffer-memory=40960
+
+spring.data.solr.host=http://192.168.20.197:8983/solr/test_core
+
 loginUrl=/
 
 server.Port =80
 #日志输出级别由高到低：OFF、FATAL、ERROR、WARN、INFO、DEBUG、TRACE、 ALL
 # 建议使用：ERROR、WARN、INFO、DEBUG
-logging.level.com.fable.demo.bussiness=debug
+logging.level.root=info
 #日志存放位置
 logging.file=log/spring.log
 #日志保留最近两天
