--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.thymeleaf.cache=false
 spring.resources.chain.strategy.content.enabled=true
 spring.resources.chain.strategy.content.paths=/**
 
-spring.datasource.jdbcUrl=jdbc:mysql://192.168.20.197:3306/hairuide?useUnicode=true&characterEncoding=gbk&zeroDateTimeBehavior=convertToNull
+spring.datasource.jdbcUrl=jdbc:mysql://localhost:3306/hairuide?useUnicode=true&characterEncoding=gbk&zeroDateTimeBehavior=convertToNull&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=root123
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #redis
@@ -48,3 +48,5 @@ logging.file=log/spring.log
 logging.file.max-history=2
 #单条分割日志文件大小
 logging.file.max-size=20MB
+#彩色日志 never:禁用，detect:檢查終端是否支持ansi支持就用，always:總是使用ansi-console輸出，若終端不支持，會有很多干擾信息
+spring.output.ansi.enabled=always
