--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
-spring.thymeleaf.mode=HTML
+spring.thymeleaf.mode=HTML5
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.servlet.content-type=text/html
 spring.thymeleaf.cache=false
@@ -13,7 +13,7 @@ spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #redis
-spring.redis.host=192.168.20.197
+spring.redis.host=192.168.0.105
 spring.redis.port=6379
 spring.redis.jedis.pool.max-active=8
 spring.redis.jedis.pool.max-wait=2000ms
@@ -21,7 +21,7 @@ spring.redis.jedis.pool.max-idle=500
 spring.redis.jedis.pool.min-idle=0
 spring.redis.timeout=2000ms
 
-spring.kafka.bootstrap-servers=192.168.20.197:9092
+spring.kafka.bootstrap-servers=192.168.0.105:9092
 spring.kafka.consumer.enable-auto-commit=true
 spring.kafka.consumer.auto-commit-interval=1000
 spring.kafka.consumer.auto-offset-reset=latest
@@ -34,7 +34,7 @@ spring.kafka.producer.acks=all
 spring.kafka.producer.lingerms=1
 spring.kafka.producer.buffer-memory=40960
 
-spring.data.solr.host=http://192.168.20.197:8983/solr/test_core
+spring.data.solr.host=http://192.168.0.100:8983/solr/test_core
 
 loginUrl=/
 
