跟着spring框架与mysql8.0版本升级一下

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.thymeleaf.cache=false
 spring.resources.chain.strategy.content.enabled=true
 spring.resources.chain.strategy.content.paths=/**
 
-spring.datasource.jdbcUrl=jdbc:mysql://localhost:3306/hairuide?useUnicode=true&characterEncoding=gbk&zeroDateTimeBehavior=convertToNull&useSSL=false
+spring.datasource.jdbcUrl=jdbc:mysql://localhost:3306/hairuide?useUnicode=true&characterEncoding=gbk&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=GMT
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -38,7 +38,9 @@ spring.data.solr.host=http://192.168.0.100:8983/solr/test_core
 
 loginUrl=/
 
-server.Port =80
+server.Port =8081
+#内置tomcat session超时时间 单位秒;
+server.servlet.session.timeout=1800
 #日志输出级别由高到低：OFF、FATAL、ERROR、WARN、INFO、DEBUG、TRACE、 ALL
 # 建议使用：ERROR、WARN、INFO、DEBUG
 logging.level.root=info
